<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_group_date_time" >
        <ListPreference
            android:defaultValue="MM/dd/yyyy"
            android:entries="@array/date_format_text"
            android:entryValues="@array/date_format_text"
            android:key="dateFormat"
            android:summary="@string/pref_date_desc"
            android:title="@string/pref_date_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_data" >
        <Preference
            android:key="importData"
            android:summary="@string/pref_import_desc"
            android:title="@string/pref_import_data" />
        <Preference
            android:key="exportData"
            android:summary="@string/pref_export_desc"
            android:title="@string/pref_export_data" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_contact" >
        <Preference
            android:key="featurePref"
            android:summary="@string/pref_feature_desc"
            android:title="@string/title_feature" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_information" >
        <Preference
            android:key="changelogPref"
            android:summary="@string/pref_changelog_desc"
            android:title="@string/title_changelog" />
    </PreferenceCategory>

</PreferenceScreen>