<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:icon="@drawable/ic_menu_add"
        android:id="@+id/menu_main_add"
        android:title="@string/menu_main_add">
    </item>
    <item
        android:icon="@drawable/ic_menu_filter"
        android:id="@+id/menu_main_filter"
        android:title="@string/menu_main_filter">
    </item>
    <item
        android:icon="@drawable/ic_menu_friends"
        android:id="@+id/menu_main_friends"
        android:title="@string/menu_main_friends">
    </item>
    <item
        android:icon="@drawable/ic_menu_items"
        android:id="@+id/menu_main_items"
        android:title="@string/menu_main_items">
    </item>
    <item
        android:icon="@drawable/ic_menu_config"
        android:id="@+id/menu_main_settings"
        android:title="@string/menu_main_settings">
    </item>

</menu>