<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/flg_lent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_lent"
        android:textColor="@color/navy" />

    <CheckBox
        android:id="@+id/flg_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_returned"
        android:textColor="@color/navy" />

    <CheckBox
        android:id="@+id/flg_archive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_achived"
        android:textColor="@color/navy" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <br.com.eduardo.loan.ui.button.BootstrapButton
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/button_update"
            android:textSize="18sp"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="success" />

        <br.com.eduardo.loan.ui.button.BootstrapButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:textSize="18sp"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="info" />
    </LinearLayout>

</LinearLayout>