<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        android:id="@+id/menuHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_home"
        android:drawablePadding="5dp"
        android:paddingBottom="5dp"
        android:text="@string/menu_main_home"
        android:textColor="@color/red"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/menuLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_add"
        android:drawablePadding="5dp"
        android:paddingBottom="5dp"
        android:text="@string/menu_main_add"
        android:textColor="@color/red"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/menuFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_friends"
        android:drawablePadding="5dp"
        android:paddingBottom="5dp"
        android:text="@string/menu_main_friends"
        android:textColor="@color/red"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/menuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_items"
        android:drawablePadding="5dp"
        android:paddingBottom="5dp"
        android:text="@string/menu_main_items"
        android:textColor="@color/red"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/menuSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_config"
        android:drawablePadding="5dp"
        android:paddingBottom="5dp"
        android:text="@string/menu_main_settings"
        android:textColor="@color/red"
        android:textSize="28sp" />

</LinearLayout>