<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/dg_sms_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message" />

        <EditText
            android:id="@+id/dg_sms_message"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:minLines="5" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/dg_sms_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_send" />

            <Button
                android:id="@+id/dg_sms_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>