<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbars="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_item_add_title" />

        <EditText
            android:id="@+id/dg_mail_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ac_item_add_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_item_add_description" />

        <EditText
            android:id="@+id/dg_mail_description"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:hint="@string/ac_item_add_description"
            android:inputType="textMultiLine"
            android:minLines="6" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/dg_mail_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_send" />

            <Button
                android:id="@+id/dg_mail_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>