<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@drawable/title_gradient"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dip"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22dip"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ac_item_detail_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/cd_item"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/ic_type_default" />

    <EditText
        android:id="@+id/ac_item_detail_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/text_black_bg"
        android:cursorVisible="false"
        android:editable="false"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:hint="@string/ac_item_add_title"
        android:maxLines="3"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ac_item_add_description"
        android:textSize="14dp" >
    </TextView>

    <EditText
        android:id="@+id/ac_item_detail_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/ac_item_add_description"
        android:textSize="18dp" />

</LinearLayout>