<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/head"
        android:name="br.com.eduardo.loan.ui.fragment.TitleFragment_"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/actionbar_height" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <TextView
                style="@style/labelStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemNameLabel" />

            <EditText
                android:id="@+id/itemNameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_button_search"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/select_item"
                android:inputType="none"
                android:singleLine="true" />

            <TextView
                style="@style/labelStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/friendNameLabel" />

            <EditText
                android:id="@+id/friendNameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_button_search"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/select_friend"
                android:inputType="none"
                android:singleLine="true" />

            <TextView
                style="@style/labelStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_loan" />

            <br.com.eduardo.loan.ui.view.DateView_
                android:id="@+id/dateText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_button_search"
                android:focusable="false"
                android:hint="@string/select_friend"
                android:inputType="date"
                android:paddingTop="5dp" />

            <!-- TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Alarm" />

            <br.com.eduardo.loan.ui.view.DateView_
                android:id="@+id/dateAlarmText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_button_search"
                android:focusable="false"
                android:hint="@string/select_friend"
                android:inputType="date"
                android:paddingTop="5dp" / -->

            <fragment
                android:id="@+id/action"
                android:name="br.com.eduardo.loan.ui.fragment.SaveCancelFragment_"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>